# sqlite_h3

./: Makefile
docs/: README.md
h3lib/: .gitignore  CMakeLists.txt  Makefile  README.md  h3api.h
include/: h3api.h
src/: sqlite_h3.c
tests/: .gitignore  Makefile  common.py  test_can_load_extension.py  test_dummy.py
